# Mechavania

./: .gitignore  CMakeLists.txt  Makefile  README.md
documentation/: 20_05_14_Ideas.md  20_05_15_Features.md
include/: AnimatedSprite.hpp  CMakeLists.txt  Drawable.hpp  Entity.hpp  Game.hpp  Libs.hpp  Mcamera.hpp  Mphysac.hpp  Painter.hpp  PlayerEntity.hpp  Renderer.hpp  ResourcesID.hpp  ResourcesLoader.hpp  Sprite.hpp  Window.hpp  test.hpp
include/Entity/: Entity.hpp  MovableEntity.hpp  PlayerEntity.hpp
include/Input/: Action.hpp  InputTarget.hpp  InputTarget.tpp
include/MCamera/: MCamera.hpp
include/MPhysac/: MPhysac.hpp  MPhysacBody.hpp  MPhysacShape.hpp  MPhysacWorld.hpp
include/Utils/: Vector.hpp
src/: AnimatedSprite.cpp  CMakeLists.txt  Entity.cpp  Game.cpp  Libs.cpp  Libs.hpp  Mcamera.cpp  Mphysac.cpp  Renderer.cpp  ResourcesLoader.cpp  Sprite.cpp  Window.cpp  main.cpp
src/Entity/: Entity.cpp  Entity.hpp  MovableEntity.cpp  PlayerEntity.cpp  PlayerEntity.hpp
src/Input/: Action.cpp
src/MCamera/: MCamera.cpp  MCamera.hpp
src/MPhysac/: MPhysac.cpp  MPhysac.hpp  MPhysacBody.cpp  MPhysacBody.hpp  MPhysacShape.cpp  MPhysacShape.hpp  MPhysacWorld.cpp  MPhysacWorld.hpp
src/Mphysac/: MPhysac.cpp  MPhysac.hpp  MPhysacBody.cpp  MPhysacBody.hpp  MPhysacShape.cpp  MPhysacShape.hpp  MPhysacWorld.cpp  MPhysacWorld.hpp
src/Utils/: Vector.hpp
